manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankingapp
  namespace: dev
  labels:
    app: bankingapp

spec:
  replicas: 3

  selector:
    matchLabels:
      app: bankingapp

  template:
    metadata:
      labels:
        app: bankingapp

    spec:
      containers:
      - name: bankingapp
        image: loksaieta/bankingwebapp:latest
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 8082

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

        readinessProbe:
          httpGet:
            path: /
            port: 8082
          initialDelaySeconds: 10
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /
            port: 8082
          initialDelaySeconds: 30
          periodSeconds: 10
